enable preview in docker image