@@ -13,4 +13,4 @@ ENV APP_HOME=/usr/app/
 WORKDIR $APP_HOME
 COPY --from=TEMP_BUILD_IMAGE $APP_HOME/build/libs/$ARTIFACT_NAME .
 EXPOSE 8080
-CMD java -jar $ARTIFACT_NAME
+CMD java --enable-preview -jar $ARTIFACT_NAME
